--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+env_logger = "0.11.8"
+log = "0.4.28"
 rand = "0.9.2"
+
+[dev-dependencies]
+ctor = "0.5.0"
