--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,17 @@ edition = "2024"
 [dependencies]
 env_logger = "0.11.8"
 log = "0.4.28"
+loom = { version = "0.7.2", features = ["checkpoint"] }
 rand = "0.9.2"
+
+[target.'cfg(loom)'.dependencies]
+loom = "0.7.2"
 
 [dev-dependencies]
 ctor = "0.5.0"
+
+[features]
+default = []
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
