--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 env_logger = "0.11.8"
 log = "0.4.28"
 rand = "0.9.2"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.20"
 
 [dev-dependencies]
 ctor = "0.5.0"
