--- a/examples/simple/Cargo.toml
+++ b/examples/simple/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2024"
 
 [dependencies]
 tempest = { version = "0.1.0", path = "../.." }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = ["json"] }
