--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bincode = "2.0.1"
 env_logger = "0.11.8"
 log = "0.4.28"
 rand = "0.9.2"
@@ -12,3 +13,9 @@ tracing-subscriber = "0.3.20"
 
 [dev-dependencies]
 ctor = "0.5.0"
+
+# examples
+[[example]]
+name = "simple"
+path = "examples/simple/src/main.rs"
+
