--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2024"
 
 [dependencies]
 bincode = "2.0.1"
+derive_more = { version = "2.0.1", features = ["full"] }
 env_logger = "0.11.8"
 log = "0.4.28"
+num_enum = "0.7.4"
 rand = "0.9.2"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
