--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ env_logger = "0.11.8"
 log = "0.4.28"
 num_enum = "0.7.4"
 rand = "0.9.2"
-tracing = "0.1.41"
+tracing = { version = "0.1.41" }
 tracing-subscriber = "0.3.20"
 
 [dev-dependencies]
