--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,17 @@ tracing-subscriber = "0.3.20"
 
 [dev-dependencies]
 ctor = "0.5.0"
+opentelemetry = "0.31.0"
+opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "metrics"] }
+opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
+opentelemetry-stdout = "0.31.0"
+opentelemetry_sdk = "0.31.0"
+tokio = { version = "1.48.0", features = ["full"] }
+tracing-core = "0.1.34"
+tracing-opentelemetry = "0.32.0"
 
 # examples
 [[example]]
-name = "simple"
-path = "examples/simple/src/main.rs"
+name = "tempest-otel"
+path = "examples/tempest-otel.rs"
 
