--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 bincode = "2.0.1"
 derive_more = { version = "2.0.1", features = ["full"] }
 env_logger = "0.11.8"
+hex = "0.4.3"
 log = "0.4.28"
 num_enum = "0.7.4"
 rand = "0.9.2"
