--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,16 @@ release-tracing-debug = ["tracing/release_max_level_debug"]
 release-tracing-trace = ["tracing/release_max_level_trace"]
 
 [dependencies]
+async-trait = "0.1.89"
 bincode = "2.0.1"
+crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
 derive_more = { version = "2.0.1", features = ["full"] }
 env_logger = "0.11.8"
+futures = "0.3.31"
 hex = "0.4.3"
+itertools = "0.14.0"
 log = "0.4.28"
+memmap2 = "0.9.8"
 num_enum = "0.7.4"
 rand = "0.9.2"
 tracing = { version = "0.1.41", features = [] }
